# Akasha

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  REFERENCE.md  ROADMAP.md  conanfile.py
.github/workflows/: ci.yml
apps/: example.cpp
build-bundle/: CMakeCache.txt  Makefile  cmake_install.cmake
cmake/: BundleStaticArchive.cmake  akashaConfig.cmake.in
examples/: benchmarks.cpp  cleanup.cpp  compaction.cpp  comprehensive.cpp  datasetview.cpp  error_handling.cpp  multiple_datasets.cpp  navigation.cpp  nested_data.cpp  performance_tuning.cpp  quickstart.cpp  vectors.cpp
include/: akasha.hpp
src/: akasha.cpp
tests/: basic_tests.cpp  test_common.hpp  test_datasetview.cpp  test_deep_paths.cpp  test_errors.cpp  test_framework.hpp  test_invalid_paths.cpp  test_load_errors.cpp  test_load_unload.cpp  test_navigation.cpp  test_overwrite.cpp  test_performance.cpp  test_root_values.cpp  test_scalars.cpp  test_strings.cpp  test_structs.cpp  test_type_and_size.cpp  test_vectors.cpp
